unpackaged/main/default/objects/sked_Location_Availability__c/sked_Location_Availability__c.object-meta.xml
<CustomObject>
    <label>Location Availability</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Location Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>