unpackaged/main/default/objects/sked_Location_Availability__c/fields/sked_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Available</label>
    <type>Checkbox</type>
</CustomField>