unpackaged/main/default/objects/sked_Location_Availability__c/fields/sked_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Location__c</fullName>
    <label>Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Location Availabilities</relationshipLabel>
    <relationshipName>sked_Location_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>