unpackaged/main/default/objects/sked_Location_Availability__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>